# Marvin-meson

./: .Makefile.swp  .gitignore  Makefile  README.md  install.sh  main.c  meson.build
cmd/: cmd_bbl.c  cmd_bubble.c
includes/: cmd_path.h  libcmd.h  libft.h  list_cmd.h  marvin.h
media/: quote.txt  sprite
src/: .Makefile.swp  Makefile  a.out  cmd_help.c  cmd_update.c  ft_bbl.c  ft_lenfill.c  ft_memset.c  ft_setalloc.c  ft_strcmp.c  ft_strcpy.c  ft_strjoin.c  ft_strlen.c  libftmarvin.h  list_cmd.c  main.c  printable.c  warping.c  wraping.c
src/commands/: a.out  cmd_bbl.c  cmd_help.c  cmd_update.c  libcmd.h  list_cmd.c  struct_command.c
src/functions/: a.out  alloc.c  ft_bbl.c  ft_lenfill.c  ft_memset.c  ft_setalloc.c  ft_strcmp.c  ft_strcpy.c  ft_strjoin.c  libft.h  printable.c  warping.c
